Change in UI of Personal Details , Fixed Alignment of Add Vendor Address Popup

--- a/src/app/Components/address-form/address-form.component.css
+++ b/src/app/Components/address-form/address-form.component.css
@@ -2,11 +2,7 @@
     color: red;
 }
 
-.modal-dialog {
-    overflow-y: initial !important
-}
 .modal-body {
-    height: 462px;
-    max-height: 430px;
-    overflow-y: auto;
+    height: 450px;
+    max-height: 450px;
 }
